--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
 </body>
 
 <footer>
-    <h6>Copyrights 2017 Vegetables cise / Design by Vegetables</h6>
+    <p>Copyrights 2017 Vegetables cise / Design by Vegetables</p>
 </footer>
 </html>
